# rfid_simulator

./: CMakeLists.txt  LICENSE  README.md
app/: main.cpp
broker/: minimal_mqtt_broker.py
build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/: paho-mqtt.cmake
src/: rfic_controller.cpp  rfid_controller.h  rfid_injector.h  rfid_listener.h
subscriber/: subscriber.py
